--- a/aha/index.html
+++ b/aha/index.html
@@ -9,34 +9,32 @@
 
     </head>
     <body>
-    	<div class="navbar" data-200="opacity:.9;" data-260="opacity:.65;">
+    	<div class="navbar" data-200="opacity:.9;" data-260="opacity:1;">
     		<ul>
     			<li><a href="#">home</a></li>
     			<li><a href="#">clients</a></li>
+    			<li><img src="glasses.png" style="display:inline-block;width:42px;opacity:.8;"/></li>
     			<li><a href="#">blog</a></li>
     			<li><a href="#">work with us</a></li>
     		</ul>
     	</div>
     	<section id="hero">
 			<header class="container">
-				<img src="glasses.png" style="display:inline-block;width:170px;"/>
 				<h1>Allen Hall Advertising</h1>
 				<h3>University of Oregon Advertising Group</h3>
 			</header>
 		</section>
-		<section class="blue">
-			<div class="container">
-				<section class="description">
-					<h2 class="text-center">WHO WE ARE</h2>
-					<p>Lorem ipsum Incididunt reprehenderit aliquip laboris Excepteur amet voluptate aute anim sunt veniam tempor quis. Lorem ipsum Est amet dolore sunt ea consectetur in enim et non fugiat. Lorem ipsum Ut Ut cupidatat do commodo deserunt mollit commodo in exercitation minim voluptate. Lorem ipsum Ex esse ea aute labore aute exercitation amet. Lorem ipsum Cillum reprehenderit irure irure sunt irure velit laborum aute officia. Lorem ipsum Sunt veniam proident veniam elit veniam aliquip magna.</p>
-				</section>
-			</div>
+		<section class="black">
+			<div class="overlay"></div>
+			<iframe src="http://player.vimeo.com/video/67713418?portrait=0&title=0&byline=0" height="360" width="640" allowfullscreen="" frameborder="0"></iframe>
 		</section>
 		<section class="grey">
 			<div class="container">
+					<h2 class="text-center">WHO WE ARE</h2>
+			</div>
+			<div class="container">
 				<section class="description">
-					<h2 class="text-center">WHAT WE DO</h2>
-					<p>Lorem ipsum Aliqua velit mollit sunt dolor occaecat ad id sed. Lorem ipsum Eiusmod reprehenderit occaecat tempor tempor minim veniam ullamco ea adipisicing Ut. Lorem ipsum Ut labore esse Excepteur mollit Excepteur culpa aliquip nulla dolore cupidatat dolor in. Lorem ipsum Aliquip nostrud sit ut sunt dolore proident Ut et tempor sint adipisicing. Lorem ipsum Excepteur aliqua amet anim fugiat dolor consectetur occaecat. Lorem ipsum Consequat officia enim sint anim nulla eiusmod aute. Lorem ipsum Aute in ex ullamco et officia culpa cillum. Lorem ipsum Labore elit dolor labore dolore exercitation do sit anim. Lorem ipsum Excepteur non magna quis Excepteur eu ad dolor ex. Lorem ipsum Dolor laborum qui amet Duis ullamco occaecat sunt.</p>
+					<p>Allen Hall Advertising is a student-run advertising agency at the University of Oregon. We offer a full range of advertising services to real clients within the local and greater Pacific Northwest community. Our goal is to produce professional-level work while providing AHA members with hands-on experience in the advertising field.</p>
 				</section>
 			</div>
 		</section>
