--- a/customchecksdemo.html
+++ b/customchecksdemo.html
@@ -2,55 +2,44 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Gallery Hover Demo</title>
+        <title>Styled Checkboxes and Radio Buttons - hobiz.al</title>
+        <link rel="stylesheet" type="text/css" href="css/custom.css">
    		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="//use.typekit.net/gvg0bbo.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        <script type="text/javascript" src="http://use.typekit.net/gvg0bbo.js"></script>
     </head>
-    <style>
-    	body {
-    		font-family: Helvetica, sans-serif;
-    		margin: 0;
-    		background: #ececec;
-    	}
-    	h1,h2,h3,h4,h5,h6 {
-    		font-family: Montserrat;
-    		margin: 0;
-    		padding: 20px 0;
-    		color: #333;
-    		text-align: center;
-    	}
-    	span {
-            display: block;
-        }
-        .container {
-            width: 500px;
-            margin: 0 auto;
-        }
-    </style>
     <body>
 
-		<header class="container">
-			<h1>Custom checkboxes</h1>
-			<h3>cool demo</h3>
+		<header class="container-wide">
+			<h1>Styled Checkboxes and Radio Buttons</h1>
 		</header>
-
 		<section>
 			<div class="container">
-				<span>
-                    <input id="checkbox1" type="checkbox" value="box">
-                    <label for="checkbox1">Opition 1</label>
-                </span>
-                <span>
-                    <input id="checkbox2" type="checkbox" value="box">
-                    <label for="checkbox2">Opition 2</label>
-                </span>
-                <span>
-                    <input id="checkbox3" type="checkbox" value="box">
-                    <label for="checkbox3">Opition 3</label>
-                </span>
+                <form id="custom-1">
+                	<span>
+                        <input id="checkbox1" type="checkbox" value="box">
+                        <label for="checkbox1">Opition 1</label>
+                    </span>
+                    <span>
+                        <input id="checkbox2" type="checkbox" value="box">
+                        <label for="checkbox2">Opition 2</label>
+                    </span>
+                    <span>
+                        <input id="checkbox3" type="checkbox" value="box">
+                        <label for="checkbox3">Opition 3</label>
+                    </span>
+                    <span>
+                        <input id="checkbox4" type="checkbox" value="box">
+                        <label for="checkbox4">Opition 4</label>
+                    </span>
+                    <span>
+                        <input id="checkbox5" type="checkbox" value="box">
+                        <label for="checkbox5">Opition 5</label>
+                    </span>
+                    <span>
+                        <input id="checkbox6" type="checkbox" value="box">
+                        <label for="checkbox6">Opition 6</label>
+                    </span>
                 <hr>
-                <form>
                     <span>
                         <input name="choice" id="radio1" type="radio" value="box">
                         <label for="radio1">Opition 1</label>
@@ -63,9 +52,100 @@
                         <input name="choice" id="radio3" type="radio" value="box">
                         <label for="radio3">Opition 3</label>
                     </span>
+                    <span>
+                        <input name="choice" id="radio4" type="radio" value="box">
+                        <label for="radio4">Opition 4</label>
+                    </span>
+                    <span>
+                        <input name="choice" id="radio5" type="radio" value="box">
+                        <label for="radio5">Opition 5</label>
+                    </span>
+                    <span>
+                        <input name="choice" id="radio6" type="radio" value="box">
+                        <label for="radio6">Opition 6</label>
+                    </span>
                 </form>
+                <p>
+                    <a href="http://hobiz.al/lab/?p=5" class="text-center">Back to the article</a>
+                </p>
 			</div>
 		</section>
 
+        <section class="dark-1">
+            <div class="container-wide">
+                <form id="custom-2">
+                    <span>
+                        <input id="checkbox2-1" type="checkbox" value="box">
+                        <label for="checkbox2-1">Opition 1</label>
+                    </span>
+                    <span>
+                        <input id="checkbox2-2" type="checkbox" value="box">
+                        <label for="checkbox2-2">Opition 2</label>
+                    </span>
+                    <span>
+                        <input id="checkbox2-3" type="checkbox" value="box">
+                        <label for="checkbox2-3">Opition 3</label>
+                    </span>
+                </form>
+            </div>
+        </section>
+
+        <section class="light">
+            <div class="container-wide">
+                <form id="custom-3">
+                    <span>
+                        <input name="choice" id="radio3-2" type="radio" value="box">
+                        <label for="radio3-2" id="female"><span><img src="images/girl.png" /><span></label>
+                    </span>
+                    <span>
+                        <input name="choice" id="radio3-1" type="radio" value="box">
+                        <label for="radio3-1" id="male"><span><img src="images/boy.png" /><span></label>
+                    </span>
+                </form>
+            </div>
+        </section>
+
+        <section class="dark-2">
+            <div class="container-wide">
+                <form id="custom-4">
+                    <span>
+                        <input id="checkbox4-1" type="checkbox" value="box">
+                        <label for="checkbox4-1">Opition 1</label>
+                    </span>
+                    <span>
+                        <input id="checkbox4-2" type="checkbox" value="box">
+                        <label for="checkbox4-2">Opition 2</label>
+                    </span>
+                    <span>
+                        <input id="checkbox4-3" type="checkbox" value="box">
+                        <label for="checkbox4-3">Opition 3</label>
+                    </span>
+                    <span>
+                        <input id="checkbox4-4" type="checkbox" value="box">
+                        <label for="checkbox4-4">Opition 4</label>
+                    </span>
+                </form>
+            </div>
+        </section>
+
+        <section class="white">
+            <div class="container-wide">
+                <form id="custom-5">
+                        <input name="choice" id="checkbox5-1" type="radio" value="box">
+                        <label for="checkbox5-1">Opition 1</label>
+                        <input name="choice" id="checkbox5-2" type="radio" value="box">
+                        <label for="checkbox5-2">Opition 2</label>
+                        <input name="choice" id="checkbox5-3" type="radio" value="box">
+                        <label for="checkbox5-3">Opition 3</label>
+                        <input name="choice" id="checkbox5-4" type="radio" value="box">
+                        <label for="checkbox5-4">Opition 4</label>
+                    <div class="effect"></div>
+                </form>
+            </div>
+        </section>
+        <section class="black">
+            <a href="http://hobiz.al/lab">hobiz.al/lab/</a>
+            <a href="http://twitter.com/openmik503">@OpenMike503</a>
+        </section>
 	</body>
 </html>
