--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Mike Hobizal - Interactive Designer</title>
+        <title>Mike Hobizal</title>
    		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script type="text/javascript" src="//use.typekit.net/gvg0bbo.js"></script>
@@ -12,10 +12,80 @@
 
     	<section id="header">
 			<header class="container">
+				<div><img src="images/logo2.png" style="width:130px;margin-bottom:40px;"></div>
 				<h1>Mike Hobizal</h1>
-				<h3>I'm an interactive designer who gives life to design</h3>
+				<!-- <h3>I'm an interactive designer who gives spark to dull content</h3> -->
 			</header>
+			<!-- <div class="floaty">Scroll to find out what I do</div> -->
 		</section>
+		<section id="blue">
+			<div class="container">
+
+				<div class="image">
+
+					<section class="macbook-box">
+					</section>
+					<section class="iphone-box">
+						<div class="iphone-inner">
+							<div class="inside">
+								<div class="blue">
+										<div class="line-1"></div>
+										<div class="line-3"></div>
+										<div class="line-2"></div>
+										<div class="line-4"></div>
+								</div>
+								<div class="red">
+										<div class="line-1"></div>
+										<div class="line-2"></div>
+										<div class="line-2"></div>
+										<div class="line-3"></div>
+								</div>
+								<div class="green">
+
+										<div class="line-3"></div>
+										<div class="line-2"></div>
+										<div class="line-1"></div>
+										<div class="line-1"></div>
+								</div>
+								<div class="blue">
+										<div class="line-1"></div>
+										<div class="line-3"></div>
+										<div class="line-2"></div>
+										<div class="line-4"></div>
+								</div>
+								<div class="red">
+										<div class="line-3"></div>
+										<div class="line-2"></div>
+										<div class="line-1"></div>
+										<div class="line-3"></div>
+								</div>
+							</div>
+						</div>
+					</section>
+				</div>
+
+				<section class="description">
+					<h2>responsive web design</h2>
+					<p>I use HTML, CSS, Javascript to create mobile first designs</p>
+					<p>I also love SASS, Wordpress, Drupal and JQuery</p>
+				</section>
+			</div>
+		</section>
+
+		<section id="darkgrey">
+			<div class="container">
+				<section class="description text-right margin-right-40">
+					<h2>print design.</h2>
+					<p>Experienced with Illustrator, Photoshop, InDesign, After Effects.</p>
+				</section>
+				<section class="image spinny" style="position:relative;" id="design">
+					<div class="image-1" data-anchor-target="#design"></div>
+					<div class="image-2" data-anchor-target="#design"></div>
+					<div class="image-3" data-anchor-target="#design"></div>
+				</section>
+			</div>
+		</section>
+
 
 		<section id="blue">
 			<div class="container" data--100-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
