--- a/music/index.html
+++ b/music/index.html
@@ -25,6 +25,7 @@
 	    		<div class="col">
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/itunes.jpg" /></div>
+		    			<h3>iTunes</h3>
 		    			<p>iTunes is Apple’s application for facilitating and providing users of the iPod with music. iTunes follows a more traditional music industry model where consumers purchase music either in the form of a single or an album, and then iTunes relays the money to the artists recording label deducting their cut. In our opinion, the biggest hurdle iTunes is facing is getting consumers of music to come to them when acquiring new music. With so many streams or methods of acquiring new music, what does iTunes have to offer that others do not? An interesting aspect to note is that iTunes primarily services users of the iPod, iPad, or iPhone. In class Dave Allen mentioned that the majority of the world is not using the apple brand</p>
 
 						<p>iTunes recently launched iTunes Radio, an online radio streaming service that gives users the ability to purchase a song directly from iTunes. The service streams for free, with purchase of an Apple product of course. iTunes Radio allows customers to make a purchase without leaving the actually streaming service. </p>
@@ -34,13 +35,16 @@
 	    		<div class="col">
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/nipsey.png" /></div>
+		    			<h3>Nipsey Hussle</h3>
 		    			<p>Nipsey Hussle, an independent rap-musician from Los Angeles California was struggling to find a way to earn revenue through traditional music streams. Vowing to stay an independent artist he came up with an innovative way to both service his entire fan base and make money off of his upcoming mixtape titled CRENSHAW. The campaign he devised offered a free downloadable version of the mixtape on websites such as datpiff.com or fans could pre-order an autographed hard copy of the mixtape for $100. Using the hashtag #proud2pay Nipsey was able to sell 1000 copies of CRENSHAW, and according to an article on forbes.com fellow rapper Jay-Z purchased 100 copies for himself. By offering the mixtape for free or for $100 Nipsey was able to reach a niche audience who were “proud 2 pay” for the work. Nipsey Hussle has showed the music community it is still possible to earn an above average salary while still providing the majority audience what they want, free music.</p>
+		    			<p>Visit: <a href="http://iamproud2pay.com/">http://iamproud2pay.com/</a></p>
 		    		</div>
 		    	</div>
 
 	    		<div class="col">
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/spot.png" /></div>
+		    			<h3>Spotify</h3>
 						<p>Spotify was founded in 2006 and was one of the first music streaming applications of its kind. Spotify offers two versions their software. The free version of the software is accompanied by advertisements and is limited on mobile by only allowing streaming shuffle play. The ‘Premium’ version allows an ad-free experience where users can listen to tracks offline on any of their devices. This free &amp; paid version model has its advantages and allows Spotify to license artist’s music no matter which version the user chooses. Spotify boasts 24 million users in their <a href="https://www.spotify.com/us/2013/">"2013 Year in Review”</a>.</p>
 		    		</div>
 		    	</div>
@@ -48,19 +52,23 @@
 	    		<div class="col">
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/trent.png" /></div>
+		    			<h3>Trent Reznor</h3>
 		    		</div>
 		    	</div>
 
 	    		<div class="col">
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/sc.png" /></div>
+		    			<h3>Soundcloud</h3>
 		    		</div>
 		    	</div>
 
 	    		<div class="col">
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/pl.png" /></div>
-		    			<p>Derek Vincent Smith, aka Pretty Lights, is an electronic musician from Denver, CO. He dropped out of College to pursue his music career. His unique style of hip hop and electronic instrumentals broke into the mainstream in 2010 when he performed at Coachella. Smith gives away all his music for free on his website with the option to donate. His last record A Color Map of The Sun sold preorders with signed shirts, vinyl records, cds & other various merchandise items, the album was also given away for free upon its release. The record was nominated for a grammy in 2014 in the Best Electronic Music category. Smith is a prime example of an artist who is selling an experience rather than just a download.</p>
+		    			<h3>Pretty Lights</h3>
+		    			<p>Derek Vincent Smith, aka Pretty Lights, is an electronic musician from Denver, CO. He dropped out of College to pursue his music career. His unique style of hip hop and electronic instrumentals broke into the mainstream in 2010 when he performed at Coachella. Smith gives away all his music for free on his website with the option to donate, he owns his own record label called Pretty Lights Music, all the artists under his label give away their music for free. His last record <i>A Color Map of The Sun</i> sold preorders with signed shirts, vinyl records, cds &amp; other various merchandise items, the album was also given away for free upon its release. The record was nominated for a grammy in 2014 in the Best Electronic Music category. Smith is a prime example of an artist who is selling an experience rather than just a download.</p>
+		    			<p>Visit: <a href="http://prettylightsmusic.com/">http://prettylightsmusic.com/</a></p>
 		    		</div>
 		    	</div>
 	    	</div>
