--- a/music/index.html
+++ b/music/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script type="text/javascript" src="js/skrollr.min.js"></script>
     </head>
-    <body>
+    <body class="skrollr-body">
     	<div class="fixedbg" data-0="top:300px;" data-400="top:0;"></div>
     	<section class="top">
 
@@ -76,8 +76,7 @@
 
 	<script type="text/javascript">
 	if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-
-		}
+	}
 	else {
         window.onload = function() {
                 skrollr.init({
