--- a/music/index.html
+++ b/music/index.html
@@ -26,9 +26,9 @@
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/itunes.jpg" /></div>
 		    			<h3>iTunes</h3>
-		    			<p>iTunes is Apple’s application for facilitating and providing users of the iPod with music. iTunes follows a more traditional music industry model where consumers purchase music either in the form of a single or an album, and then iTunes relays the money to the artists recording label deducting their cut. In our opinion, the biggest hurdle iTunes is facing is getting consumers of music to come to them when acquiring new music. With so many streams or methods of acquiring new music, what does iTunes have to offer that others do not? An interesting aspect to note is that iTunes primarily services users of the iPod, iPad, or iPhone. In class Dave Allen mentioned that the majority of the world is not using the apple brand</p>
+		    			<p>Tunes is Apple’s application for facilitating and providing users of the iPod with music. iTunes follows a more traditional music industry model where consumers purchase music either in the form of a single or an album, and then iTunes relays the money to the artists recording label deducting their cut. In our opinion, the biggest hurdle iTunes is facing is getting consumers of music to come to them when acquiring new music. With so many streams or methods of acquiring new music, what does iTunes have to offer that others do not? An interesting aspect to note is that iTunes primarily services users of the iPod, iPad, or iPhone. In class Dave Allen mentioned that the majority of the world is not using the apple brand.</p>
 
-						<p>iTunes recently launched iTunes Radio, an online radio streaming service that gives users the ability to purchase a song directly from iTunes. The service streams for free, with purchase of an Apple product of course. iTunes Radio allows customers to make a purchase without leaving the actually streaming service. </p>
+						<p>iTunes recently launched iTunes Radio, an online radio streaming service that gives users the ability to purchase a song directly from iTunes. The service streams for free, with purchase of an Apple product of course. iTunes Radio allows customers to make a purchase without leaving the actually streaming service.</p>
 		    		</div>
 		    	</div>
 
@@ -36,7 +36,7 @@
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/nipsey.png" /></div>
 		    			<h3>Nipsey Hussle</h3>
-		    			<p>Nipsey Hussle, an independent rap-musician from Los Angeles California was struggling to find a way to earn revenue through traditional music streams. Vowing to stay an independent artist he came up with an innovative way to both service his entire fan base and make money off of his upcoming mixtape titled CRENSHAW. The campaign he devised offered a free downloadable version of the mixtape on websites such as datpiff.com or fans could pre-order an autographed hard copy of the mixtape for $100. Using the hashtag #proud2pay Nipsey was able to sell 1000 copies of CRENSHAW, and according to an article on forbes.com fellow rapper Jay-Z purchased 100 copies for himself. By offering the mixtape for free or for $100 Nipsey was able to reach a niche audience who were “proud 2 pay” for the work. Nipsey Hussle has showed the music community it is still possible to earn an above average salary while still providing the majority audience what they want, free music.</p>
+		    			<p>Ermias Asghedom, aka Nipsey Hussle, is an independent rap-musician from Los Angeles, Ca. He was struggling to find a way to earn revenue through traditional music streams. Vowing to stay an independent artist he came up with an innovative way to both service his entire fan base and make money off of his upcoming mixtape titled <i>CRENSHAW</i>. The campaign he devised offered a free downloadable version of the mixtape on websites such as datpiff.com or fans could pre-order an autographed hard copy of the mixtape for $100. Using the hashtag #proud2pay Nipsey was able to sell 1000 copies of <i>CRENSHAW</i>, and according to an article on forbes.com fellow rapper Jay-Z purchased 100 copies for himself. By offering the mixtape for free or for $100 Nipsey was able to reach a niche audience who were “proud 2 pay” for the work. Nipsey Hussle has showed the music community it is still possible to earn an above average salary while still providing the majority audience what they want, free music.</p>
 		    			<p>Visit: <a href="http://iamproud2pay.com/">http://iamproud2pay.com/</a></p>
 		    		</div>
 		    	</div>
@@ -45,7 +45,7 @@
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/spot.png" /></div>
 		    			<h3>Spotify</h3>
-						<p>Spotify was founded in 2006 and was one of the first music streaming applications of its kind. Spotify offers two versions their software. The free version of the software is accompanied by advertisements and is limited on mobile by only allowing streaming shuffle play. The ‘Premium’ version allows an ad-free experience where users can listen to tracks offline on any of their devices. This free &amp; paid version model has its advantages and allows Spotify to license artist’s music no matter which version the user chooses. Spotify boasts 24 million users in their <a href="https://www.spotify.com/us/2013/">"2013 Year in Review”</a>.</p>
+						<p>Spotify was founded in 2006 and was one of the first music streaming applications of its kind. It was founded in Sweden and launched in the US with the help of Napster creator Sean Parker. Spotify offers two versions their software: the free version of the software is accompanied by advertisements and is limited on mobile by only allowing streaming shuffle play. The ‘Premium’ version allows an ad-free experience where users can listen to tracks offline on any of their devices. This free &amp; paid version model has its advantages and allows Spotify to license artist’s music no matter which version the user chooses. Spotify boasts 24 million users in their <a href="https://www.spotify.com/us/2013/">"2013 Year in Review”</a>.</p>
 		    		</div>
 		    	</div>
 
@@ -71,6 +71,13 @@
 		    			<p>Visit: <a href="http://prettylightsmusic.com/">http://prettylightsmusic.com/</a></p>
 		    		</div>
 		    	</div>
+	    	</div>
+    	</section>
+    	<section class="foot"> 
+    		<div class="container-small">
+	    		<p>
+	    		This project was created by Mike Hobizal, Zack Yannello, and Max McDermott.
+	    		</p>
 	    	</div>
     	</section>
 
