--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<h2>print design.</h2>
 					<p>Experienced with Illustrator, Photoshop, InDesign, After Effects.</p>
 				</section>
-				<section class="image spinny" style="position:relative;" id="design">
+				<section class="image spinny" style="position:relative;" id="design" data-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
 					<div class="image-1" data-anchor-target="#design"></div>
 					<div class="image-2" data-anchor-target="#design"></div>
 					<div class="image-3" data-anchor-target="#design"></div>
@@ -86,31 +86,21 @@
 			</div>
 		</section>
 
-
 		<section id="blue">
-			<div class="container" data--100-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
-				<section class="image">
-					<a href="http://hallspot.com/"><img src="images/hallspot-mac.png" alt="Hallspot photo" /></a>
+			<div class="container">
+				<section class="image spinny" style="position:relative;" id="design" data-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
+					<div class="image-1" data-anchor-target="#design"></div>
+					<div class="image-2" data-anchor-target="#design"></div>
+					<div class="image-3" data-anchor-target="#design"></div>
 				</section>
+
 				<section class="description">
-					<h2>Hallspot</h2>
-					<p>Hallspot is a social application for college students to connect with their campus. The app is closed off from all other networks, creating an exclusive atmosphere for college students to interact. I am extremely pleased to be working on the Hallspot team as a UI/UX designer.</p>
+					<h2>share experiments.</h2>
+					<p>I also give back to the community on my blog sharing code, experiments and tutorials</p>
 				</section>
 			</div>
 		</section>
 
-		<section id="darkgrey">
-			<div class="container" data--100-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
-				<section class="description">
-					<h2>Ducks Baseball: The Pond</h2>
-					<p>The Pond is the Oregon Ducks baseball team's student section. Working to promote the young baseball teams campus presence, I've had the opportunity to create designs for posters, fliers, presentations and merchandise.</p>
-					<p>To the right are three examples of posters that were made and handed out to fans.</p>
-				</section>
-				<section class="image">
-					<img src="images/posters-mac.png" alt="Pond Posters"
-				</section>
-			</div>
-		</section>
 
 		<section id="grey">
 			<div class="container">
