--- a/music/index.html
+++ b/music/index.html
@@ -60,6 +60,7 @@
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/sc.png" /></div>
 		    			<h3>Soundcloud</h3>
+		    			<p>Soundcloud was started in sweden by Alex Ljung  in 2007 with the intention of making a platform for musicians to share music with each other. Ljung just wanted a simple way to share music with other artists. He was creating a solution to a problem he had encountered but didn't know how big Soundcloud would become. Soundcloud is interesting because it allows artists to have their music only streamable, downloadable for free, or link their music to ITunes for purchase. Soundcloud has a paid option but it seems only directed at artists who upload many tracks. With the paid program, you get more storage and a stats breakdown. You also get exposed to a wider audience.</p>
 		    		</div>
 		    	</div>
 
