--- a/music/index.html
+++ b/music/index.html
@@ -53,6 +53,9 @@
 	    			<div class="col-inner">
 		    			<div class="round-picture"><img src="images/trent.png" /></div>
 		    			<h3>Trent Reznor</h3>
+		    			<p>During a concert in Reznor was bold by telling his fans to steal the CD because it really pissed off his record label. He still encouraged people to buy the music from the internet if they couldn't find the CD. This allowed Reznor to see the industry in a different way. </p>
+
+							<p><i>"Last time I was here, I was doing a lot of complaining about the ridiculous prices of CDs down here...now my record label all around the world hates me, because I yelled at them, I called them out for being greedy fucking assholes. I didn't get a chance to check, has the price come down at all? I see a no, a no, a no... Has anyone seen the price come down? Okay, well, you know what that means — STEAL IT. Steal away. Steal and steal and steal some more and give it to all your friends and keep on stealing. Because one way or another these motherfuckers will get it through their head that they're ripping people off and that that's not right."</i></p>
 		    		</div>
 		    	</div>
 
